# introspection-autoresearch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: refusal_directions_31b.npy  results_abliterated.db
docs/: 01_introspection_steering_autoresearch.md  calibration_results_qwen35b.md  decisions.md  local_pipeline_plan.md  phase1_5_results.md  phase1_results.md  phase2b_hillclimb.md  phase2c_autoresearch.md  phase2d_directed_hypotheses.md  phase2d_results.md  phase2g_plan.md  phase2h_plan.md  phase2i_results.md  phase3_plan.md  phase3_results.md  phase4_plan.md  plain_english.md  roadmap.md  session_pause_2026_04_20.md  structured_hillclimb.md
notebooks/: 01_reproduce_paper.ipynb
scripts/: backfill_axis_layers.py  build_capraro_buckets.py  build_fault_line_directions.py  calibrate_cot_judge.py  calibrate_effective.py  calibrate_feature_activations.py  calibrate_phase3_alpha.py  calibrate_phase3_extended.py  calibrate_phase3_freeassoc.py  calibrate_phase3_l25.py  calibrate_phase3_layers.py  calibrate_phase3_prompts.py  compare_abliterations.py  compute_attractors.py  compute_forbidden_map.py  compute_refusal_direction.py  compute_refusal_direction_gemma4.py  diagnose_paper_weights.py  enqueue_altman_opus_variants.py  enqueue_altman_seeds.py  enqueue_altman_wave1_validate.py  enqueue_lexical_control.py  export_dream_walks.py  export_for_web.py  export_phase1.py  inspect_proposer.py  refresh_phase4_site.sh  refresh_site.sh  rescore.py  rescore_fitness.py  rescore_pre_fix.py  run_huihui_comparison.sh  run_phase1_sweep.py  run_phase3_sweep.py  (+17 more)
(+137 files in other folders)
