[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "introspection-autoresearch"
version = "0.1.0"
description = "Autoresearch loop hunting steering directions that affect LLM introspection (Mac Studio M2 Ultra)."
requires-python = ">=3.11,<3.13"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
src = "src"
